final-project/css/main.css
/**********GLOBAL STYLES**********/

/*ADDING  'Open Sans' FONT FAMILY */
/* Establishing font family and size */
html {
    font-family: 'open sans', sans-serif;
    font-size: 16px;
}

header{
    margin: 0 auto;
}

/* Proportionate font sizes from week 11 lesson */
h1{
    font-size: 5.063rem;
}
h2{
    font-size: 3.375rem;
}
h3{
    font-size: 2.25rem;
}
h4{
    font-size: 1.5rem;
}
h5{
    font-size: 1rem;
}

p{
    margin: 1em 0;
}

/* Setting the maximum width of the container to 1200px*/
.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 1.5 rem;
}

/* NAVIGATION*/

/* Adding background color to nav */
nav{
    background-color: #222;
}

/* Deleting bullet list to nav */
ul{
    list-style-type:none;
    text-align: center;
    margin: 0;
    padding: 0;

}

/* Adding color to nav list and taking away list style */

/* adding margin to achieve the grey on the sides of the yellow, as seen in the mock-up photo */
nav ul{
    margin: 1em;
}
nav li a {
    display: block;
    padding: 20px;
    text-decoration: none;
    color: #c78c06;
}

/* LoVE HAte Link Visited Hover And Focus */
.nav-list a,
.nav-list a:link,
.nav-list a:visited{
    background-color: #222;
    color: #c78c06;
}

.nav-list a:hover{
    background: #c78c06;
    color: inherit;
} 

.nav-list a.current{
    background: #c78c06;
    color: inherit;
}
.logo{
    float: left;
    margin-right: 100%;
    margin-bottom: 10%;
}
/* Makes form display flex, allowing magnifying glass to line up with search bar. */
form{
    display: flex;
}
/* Positioning and stylizing the search bar to be longer and same text size as nav ul li */
.search {
    width: 90%;
    font-size: 1.5rem;
    padding: 0.5rem;
    border: 1px solid #c78c06;
}
/* Adding border to magnifying glass button, coloring the border, text, background, adding padding */
nav button{
    width: 10%;
    font-size: 1.5rem;
    background-color: #222;
    color: #c78c06;
    border: 1px solid #c78c06;
}

/* WELOME SECTION */
/* Styling background image and text color*/
.banner{
    height: 500px;
    background-image: url(../images/main-banner.jpg);
    background-repeat: no-repeat;
    background-size: 100% 100%;
    padding-top: 5rem;
    padding-bottom: 5rem;
    color:white;
}
/* HELP: how do I get my content away from the edge?! how do I get the text to be where it should be?*/
#overlay{
    height: 450px;
    background-color: rgba(0, 0, 0, 0.6);
    width: 100%;
    margin: auto;
    
}
/* Centering content of main horizontally within container */
main{
    width: 100%;
    margin:auto;
}
/* Styling main banner button to be right color and spacing */
.connectwithus{
    background-color: #c78c06;
    padding: 2rem;
    border: 0;
    font-size: 1.5rem;
    opacity: 100%;
}
/* ABOUT US */
/* HELP: padding throws off the alignment with previous */
.about-mobile{
    background-color: #ffe6ac;
    width: 100%;
    margin: 0 auto;
    padding: 1em;
}
/* Positions image properly to the container */
.about-mobile img{
    width: 100%;
    height:auto;
}

/* OUR SERVICES */
.services{
    margin: 0 auto;
    width: 100%;
}
/* using card class to style as much of the included sections (digital, marketing, video, web, print) as possible, making less work for myself */
/* styling all cards for background color and margin */
.card{
    background-color: #ffe6ac;
    margin-bottom: 1rem;
}
/* styling all cards to have an image that fits the container */
.card img{
    width: 100%;
    height: auto;
}
/* styling all card buttons to be uniform */
.card button{
    padding: 30px;
    font-size: 1.5rem;
    background-color: #222;
    color: #ffff;
}


/***********DESKTOP STYLES**********/
/* Adding a min-width media query for the screen size of 760px and above*/
@media screen and (min-width: 760px) {
    body {
        font-size: 1.25rem;
    }

    /* everything that will be your desktop styles will be in here. */




















}

